--- a/pom.xml
+++ b/pom.xml
@@ -153,10 +153,10 @@
 			</plugin>
 
 			<plugin>
-             <groupId>org.codehaus.mojo</groupId>
-             <artifactId>sonar-maven-plugin</artifactId>
-             <version>3.0.2</version>
-        </plugin>  
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>latest_version</version>
+          </plugin>
 			
 </plugins>
 	</build>
